[package]
name = "snowman"
version = "0.1.0"
edition = "2018"

[lib]
name = "snowman"

[dependencies]
futures-intrusive = "0.4.0"
futures-util = "0.3.15"
http = "0.2.4"
hyper = { version = "0.14.10", features = ["http1", "server", "tcp"] }
parking_lot = "0.11.1"
tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros", "time"] }
tower-service = "0.3.1"
